# fst

./: .clang-format  .cmake-format.yaml  .config  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: codeql.yml  unit_tests.yml
docs/: doxyfile  layout.xml  memory_management.md  stylesheet.css  tags.xml
examples/: CMakeLists.txt
examples/Print/: CMakeLists.txt  main.cpp
examples/Window/: CMakeLists.txt  main.cpp
examples/js/: CMakeLists.txt
examples/js/src/: main.cpp
examples/xpp/: CMakeLists.txt
examples/xpp/resources/: gen.h  john.h  script.lua  template_01.h  template_simple.h  trait.cpp  xpp.lua
examples/xpp/resources/gen_traits/: is_trivial.cpp
examples/xpp/resources/scripts/: check.lua
examples/xpp/resources/template/: header.template
examples/xpp/resources/traits/: add_const.template  add_lvalue_reference.template  add_rvalue_reference.template  always_false.template  conditional.template  empty_t.template  integral_constant.template  is_abstract.template  is_array.template  is_assignable.template  is_base_of.template  is_class.template  is_const.template  is_constructible.template  is_convertible.template  is_copy_assignable.template  is_copy_constructible.template  is_default_constructible.template  is_empty.template  is_enum.template  is_final.template  is_lvalue_reference.template  is_move_assignable.template  is_move_constructible.template  is_pointer.template  is_reference.template  is_rvalue_reference.template  is_same.template  is_standard_layout.template  is_trivial.template  is_trivially_copy_constructible.template  is_trivially_copyable.template  is_trivially_default_constructible.template  is_trivially_destructible.template  is_trivially_move_constructible.template  is_void.template  is_volatile.template  nullptr_t.template  remove_const.template  remove_cv.template  (+4 more)
examples/xpp/resources/utils/: clamp.template  is_one_of.template  maximum.template  minimum.template
examples/xpp/src/: main.cpp  xpp_common.h  xpp_generator.cpp  xpp_generator.h  xpp_parser.cpp  xpp_parser.h
include/fst/: aligned_storage.h  allocator.h  array.h  atomic.h  binary_file.h  bitpack.h  buffer.h  byte_vector.h  color.h  common.h  config.h  file.h  file_view.h  format.h  function.h  geometry.h  http.h  indexed_value.h  int24_t.h  iterator.h  lua.h  math.h  memory.h  memory_pool.h  memory_range.h  memory_utils.h  meta.h  mutex.h  number.h  object_wrapper.h  pair.h  parse_utils.h  path.h  pointer.h  profiler.h  reference_wrapper.h  script.h  simd.h  small_string.h  small_vector.h  (+17 more)
include/fst/async/: common.h  mutex.h  thread.h
include/fst/detail/: __alignment.h  __arch.h  __assert.h  __builtin_traits.h  __compiler.h  __container.h  __flags.h  __initializer_list.h  __int.h  __macro.h  __numeric_limits.h  __platform.h  __platform_macro.h  __traits.h
include/fst/detail/simd/: container_base.h  sse.h  vector_op.h
include/fst/lua/: common.h  lauxlib.h  lua.h  luaconf.h  register.h  state.h  traits.h
include/fst/media/: audio_buffer.h  audio_bus.h  audio_file.h  audio_format.h  audio_wire.h  interchange_file_format.h
include/fst/os/: common.h  file.h  path.h  window.h
include/fst/template/: container_data.template  container_types.template
include/fst/web/: common.h  http.h
src/: file.cpp  file_view.cpp  fst.cpp  http.cpp  memory.cpp  memory_utils.cpp  mutex.cpp  parse_utils.cpp  path.cpp  profiler.cpp  rpmalloc.h  script.cpp  smmalloc.h  string.cpp  time.cpp  trace.cpp
src/async/: event.cpp  mutex.cpp  thread.cpp
src/lua/: state.cpp
src/lua/lua/: lapi.cpp  lauxlib.cpp  lbaselib.cpp  lcode.cpp  lcorolib.cpp  lctype.cpp  lctype.h  ldblib.cpp  ldebug.cpp  ldo.cpp  ldump.cpp  lfunc.cpp  lgc.cpp  lgc.h  linit.cpp  liolib.cpp  llex.cpp  llex.h  llimits.h  lmathlib.cpp  lmem.cpp  lmem.h  loadlib.cpp  lobject.cpp  lobject.h  loslib.cpp  lparser.cpp  lprefix.h  lstate.cpp  lstate.h  lstring.cpp  lstring.h  lstrlib.cpp  ltable.cpp  ltablib.cpp  ltests.cpp  ltm.cpp  lua.cpp  lualib.h  lundump.cpp  (+4 more)
src/os/: file.cpp  path.cpp  window.cpp
src/simd/: simd.cpp
src/web/: http.cpp
tests/: CMakeLists.txt
tests/compile_fail_tests/: CMakeLists.txt
tests/compile_fail_tests/array_with_dynamic_size/: main.cpp
tests/feature_tests/: CMakeLists.txt
tests/feature_tests/config/: CMakeLists.txt  main.cpp
tests/feature_tests/headers/: CMakeLists.txt  main.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/resources/: script.lua  template_simple.h  template_test.h
tests/unit_tests/resources/script/: script.sp
tests/unit_tests/src/: array_tests.cpp  atomic_tests.cpp  basic_array_range_tests.cpp  basic_array_tests.cpp  basic_heap_array_tests.cpp  binary_file_tests.cpp  bitpack_tests.cpp  byte_vector_tests.cpp  color_tests.cpp  file_tests.cpp  file_view_tests.cpp  format_tests.cpp  function_tests.cpp  geometry_tests.cpp  http_tests.cpp  int24_t_tests.cpp  lua_tests.cpp  main.cpp  media_tests.cpp  memory_pool_tests.cpp  memory_range_tests.cpp  memory_tests.cpp  mutex_tests.cpp  number_tests.cpp  parse_utils_tests.cpp  path_tests.cpp  pointer_tests.cpp  small_vector_tests.cpp  status_tests.cpp  string_tests.cpp  traits_tests.cpp  unicode_tests.cpp  vector_tests.cpp  xml_tests.cpp
tests/unit_tests/src/async/: thread_tests.cpp
tests/unit_tests/src/os/: file_tests.cpp
tests/unit_tests/src/simd/: array_tests.cpp  buffer_tests.cpp  range_tests.cpp
tests/unit_tests/src/web/: http_tests.cpp
tests/utest/: CMakeLists.txt
tests/utest/bench/: benchmark.cpp  benchmark_main.cpp  benchmark_register.cpp  colorprint.cpp  commandlineflags.cpp  fst_bench.cpp  sleep.cpp  string_util.cpp  sysinfo.cpp  timers.cpp
tests/utest/bench/benchmark/: benchmark.h  export.h
tests/utest/include/: catch2.h  fst_bench.h  utest.h
tests/utest/src/: catch2.cpp
tools/: config.h.in  fst_import.py  merge_common.py  run.py  version.txt
tools/cmake/: fst_clang_format.cmake  fst_compile_options.cmake  fst_platform.cmake  fst_version.cmake
tools/doc/: example3.html  gen_doc.py  test.h  test.md  test2.md
tools/hooks/: pre-commit
