
# Examples

set(FST_EXAMPLES_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
file(GLOB FST_EXAMPLES_LIST RELATIVE ${FST_EXAMPLES_DIRECTORY} ${FST_EXAMPLES_DIRECTORY}/*)

foreach(CURRENT_EXAMPLE ${FST_EXAMPLES_LIST})

    if (IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_EXAMPLE}")
        set(CURRENT_EXAMPLE_DIRECTORY ${FST_EXAMPLES_DIRECTORY}/${CURRENT_EXAMPLE})
        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_EXAMPLE})
    endif()
endforeach()
