
set(EXAMPLE_NAME Print)
file(GLOB_RECURSE FST_TESTS_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE FST_TESTS_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

add_executable(${EXAMPLE_NAME} ${FST_TESTS_HEADER_FILES} ${FST_TESTS_SOURCE_FILES})
target_link_libraries(${EXAMPLE_NAME} PUBLIC fst)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX include FILES ${FST_TESTS_HEADER_FILES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX src FILES ${FST_TESTS_SOURCE_FILES})

target_include_directories(${EXAMPLE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
fst_set_compile_options(${EXAMPLE_NAME} PUBLIC)

fst_include_config(${EXAMPLE_NAME})
set_target_properties(${EXAMPLE_NAME} PROPERTIES FOLDER examples)

target_compile_definitions(${EXAMPLE_NAME} PUBLIC -DWEBVIEW_RESOURCES="${CMAKE_CURRENT_SOURCE_DIR}")
