
# Feature tests

set(FST_FEATURE_TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
file(GLOB FST_FEATURE_TESTS RELATIVE ${FST_FEATURE_TESTS_DIRECTORY} ${FST_FEATURE_TESTS_DIRECTORY}/*)

foreach(CURRENT_FEATURE_TEST_NAME ${FST_FEATURE_TESTS})

    if (IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_FEATURE_TEST_NAME}")
        set(CURRENT_FEATURE_TEST_DIRECTORY ${FST_FEATURE_TESTS_DIRECTORY}/${CURRENT_FEATURE_TEST_NAME})
        file(GLOB_RECURSE CURRENT_FEATURE_TEST_SOURCE "${CURRENT_FEATURE_TEST_DIRECTORY}/*.h" "${CURRENT_FEATURE_TEST_DIRECTORY}/*.cpp")

        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${CURRENT_FEATURE_TEST_NAME})
    endif()
endforeach()
