
# Unit tests
set(FST_UNIT_TESTS_NAME fst_unit_tests)

file(GLOB_RECURSE FST_TESTS_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
file(GLOB_RECURSE FST_TESTS_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/src PREFIX include FILES ${FST_TESTS_HEADER_FILES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/src PREFIX src FILES ${FST_TESTS_SOURCE_FILES})

add_executable(${FST_UNIT_TESTS_NAME} ${FST_TESTS_HEADER_FILES} ${FST_TESTS_SOURCE_FILES})
target_link_libraries(${FST_UNIT_TESTS_NAME} PUBLIC fst utest)

target_include_directories(${FST_UNIT_TESTS_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
fst_set_compile_options(${FST_UNIT_TESTS_NAME} PUBLIC)
target_compile_definitions(${FST_UNIT_TESTS_NAME} PUBLIC -DFST_TEST_RESOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/resources")

set(FST_UNIT_TESTS_OUTPUT_RESOURCES_DIRECTORY "${CMAKE_BINARY_DIR}/unit_tests/resources")
target_compile_definitions(${FST_UNIT_TESTS_NAME} PUBLIC -DFST_TEST_OUTPUT_RESOURCES_DIRECTORY="${FST_UNIT_TESTS_OUTPUT_RESOURCES_DIRECTORY}")
file(MAKE_DIRECTORY ${FST_UNIT_TESTS_OUTPUT_RESOURCES_DIRECTORY})

fst_include_config(${FST_UNIT_TESTS_NAME})
set_target_properties(${FST_UNIT_TESTS_NAME} PROPERTIES FOLDER tests)

add_test(NAME ${FST_UNIT_TESTS_NAME} COMMAND ${FST_UNIT_TESTS_NAME})

if(WIN32)
    set_property(DIRECTORY ${PROJECT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${FST_UNIT_TESTS_NAME})
endif()

